@@ -1009,6 +1009,18 @@ div.message-partheaders .headers-table td.header {
 	padding-right: 0;
 }
 
+.subject .flag-icon {
+	display: none;
+}
+
+body.status-flagged .flag-icon {
+	display: inline-block;
+	background: url(images/listicons.png) 0 -1038px no-repeat;
+	width: 20px;
+	height: 16px;
+	vertical-align: text-top;
+}
+
 
 /*** message composition ***/
 
